Increased the size of types that scale with the number of ground rules.